27
Added support for FTL 1.6.1+ resources
Added partial editing for FTL 1.6.1+ saved games / full editing of profiles
Fixed "Sector Tree" tab's expanded preview advancing on its own
Fixed "Sector Map" preview's excessive re-rolls (isolation threshold raised)
Moved "Unlock All" buttons out of the toolbar, into the "Ship Unlocks" tab
Removed the "Extract Dats" button
Backups are restored automatically when saving fails
Added bug report dialogs when saving fails

26
Fixed forum link: <a href="https://subsetgames.com/forum/viewtopic.php?f=7&t=10959">click here</a>.
Fixed a crash when editing shops
Fixed a crash when saving a saved game with missiles/asteroids/explosions
Fixed "Ship" tab doors not repainting after open/closed changes are applied
Fixed "Ship" tab selector overlay not filling visible area to catch mouse events
Fixed "Ship" tab crew mid-walk being placed at their destination
Fixed "Ship" tab battle/repair drone bodies losing their move goals upon saving
Moved "General" tab's Sector and Boss panels into the "Sector Map" tab
Fixed "General" tab's Encounter panel not disabling for old saved game formats
Fixed Crew Records not listing all AE races when editing ("General Stats" tab)
Fixed Achievements' dump text repeating 'With Type-B' value for Type-C
Fixed launcher scripts/executable for Java 9 (NoClassDefFoundError: javax/xml/bind)
Fixed hidden files not shown when locating FTL resources
Fixed unresolved symlinks when locating FTL resources
Changed the config file's keys from camelCase to underscores
Added RNG-informed previews for sector map layouts
Added a warning when attempting to dump the blank default profile
Added alternate locations to locate FTL resources on Linux
Added 'FTLProfileEditor_debug.bat' for troubleshooting on Windows
Changed logging framework to SLF4J/Logback
Migrated to the Apache HttpComponents library
Made launcher script on OSX find java the recommended way
Made update checking optional and less frequent

25